cluster-ops/kubernetes/common/VirtualService/virtual-service-to-harbor-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry-dyndns-vservice
spec:
  gateways:
  - istio-system/registry-dyndns-gateway
  hosts:
  - registry.sytes.net
  http:
  - match:
    - uri:
      prefix: "/api/"
    headers:
      request:
        add:
          X-Forwarded-Proto: https
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/service/"    
    headers:
      request:
        add:
          X-Forwarded-Proto: https
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/v2/"
    headers:
      request:
        add:
          X-Forwarded-Proto: https
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/chartrepo/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/c/"
    headers:
      request:
        add:
          X-Forwarded-Proto: https
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - route:
    - destination:
        host: harbor-harbor-portal
        port:
          number: 80
